fix: update access point synchronization algorithm