@@ -15,27 +15,24 @@
  */
 package io.gravitee.apim.infra.crud_service.access_point;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.*;
 
 import io.gravitee.apim.core.access_point.model.AccessPoint;
+import io.gravitee.apim.core.access_point.model.AccessPointEvent;
+import io.gravitee.apim.infra.adapter.AccessPointAdapter;
 import io.gravitee.common.event.EventManager;
 import io.gravitee.repository.management.api.AccessPointRepository;
 import io.gravitee.repository.management.api.search.AccessPointCriteria;
 import io.gravitee.repository.management.model.AccessPointReferenceType;
 import io.gravitee.repository.management.model.AccessPointStatus;
+import io.gravitee.repository.management.model.AccessPointTarget;
 import io.gravitee.rest.api.service.common.UuidString;
+import java.time.Instant;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import lombok.SneakyThrows;
-import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -74,26 +71,38 @@ class AccessPointCrudServiceImplTest {
         service = new AccessPointCrudServiceImpl(accessPointRepository, eventManager);
     }
 
-    @ParameterizedTest
-    @EnumSource(AccessPoint.ReferenceType.class)
-    @SneakyThrows
-    void should_delete_existing_access_points_of_the_reference(AccessPoint.ReferenceType referenceType) {
-        // When
-        service.deleteAccessPoints(referenceType, "ref-id");
+    @Nested
+    class Delete {
 
-        AccessPointCriteria expectedAccessPointCriteria = AccessPointCriteria
-            .builder()
-            .referenceType(AccessPointReferenceType.valueOf(referenceType.name()))
-            .referenceIds(Set.of("ref-id"))
-            .status(AccessPointStatus.CREATED)
-            .to(-1)
-            .build();
+        @ParameterizedTest
+        @EnumSource(AccessPoint.ReferenceType.class)
+        void should_delete_existing_access_points_for_a_referenceType(AccessPoint.ReferenceType referenceType) throws Exception {
+            var fetchedAccessPoints = List.of(
+                io.gravitee.repository.management.model.AccessPoint.builder().id("ap1").build(),
+                io.gravitee.repository.management.model.AccessPoint.builder().id("ap2").build()
+            );
+            var accessPointCriteria = AccessPointCriteria
+                .builder()
+                .referenceType(AccessPointReferenceType.valueOf(referenceType.name()))
+                .referenceIds(Set.of("ref-id"))
+                .status(AccessPointStatus.CREATED)
+                .build();
+            when(accessPointRepository.findByCriteria(accessPointCriteria, null, null)).thenReturn(fetchedAccessPoints);
 
-        // Then
-        ArgumentCaptor<AccessPointCriteria> criteriaCaptor = ArgumentCaptor.forClass(AccessPointCriteria.class);
-        verify(accessPointRepository).updateStatusByCriteria(criteriaCaptor.capture(), eq(AccessPointStatus.DELETED));
-        AccessPointCriteria capturedCriteria = criteriaCaptor.getValue();
-        assertThat(capturedCriteria).isEqualToComparingFieldByField(expectedAccessPointCriteria);
+            var dateBeforeDeletion = Instant.now().minusSeconds(1);
+            service.deleteAccessPoints(referenceType, "ref-id");
+            var dateAfterDeletion = Instant.now().plusSeconds(1);
+
+            var accessPointCaptor = ArgumentCaptor.forClass(io.gravitee.repository.management.model.AccessPoint.class);
+            verify(accessPointRepository, times(2)).update(accessPointCaptor.capture());
+            accessPointCaptor
+                .getAllValues()
+                .forEach(ap -> {
+                    assertThat(ap.getStatus()).isEqualTo(AccessPointStatus.DELETED);
+                    assertThat(ap.getUpdatedAt()).isAfter(dateBeforeDeletion).isBefore(dateAfterDeletion);
+                });
+            verify(eventManager, times(2)).publishEvent(eq(AccessPointEvent.DELETED), any());
+        }
     }
 
     @Nested
@@ -101,8 +110,7 @@ class AccessPointCrudServiceImplTest {
 
         @ParameterizedTest
         @EnumSource(AccessPoint.ReferenceType.class)
-        @SneakyThrows
-        void should_update_existing_access_points_of_the_reference(AccessPoint.ReferenceType referenceType) {
+        void should_do_nothing_if_no_access_points(AccessPoint.ReferenceType referenceType) throws Exception {
             // Given
             var accessPoints = List.<AccessPoint>of();
 
@@ -110,20 +118,85 @@ class AccessPointCrudServiceImplTest {
             service.updateAccessPoints(referenceType, "ref-id", accessPoints);
 
             // Then
-            ArgumentCaptor<AccessPointCriteria> criteriaCaptor = ArgumentCaptor.forClass(AccessPointCriteria.class);
-            verify(accessPointRepository).updateStatusByCriteria(criteriaCaptor.capture(), eq(AccessPointStatus.DELETED));
-
-            AccessPointCriteria capturedCriteria = criteriaCaptor.getValue();
-            assertEquals(AccessPointReferenceType.valueOf(referenceType.name()), capturedCriteria.getReferenceType());
-            assertEquals(Set.of("ref-id"), capturedCriteria.getReferenceIds());
-            assertEquals(AccessPointStatus.CREATED, capturedCriteria.getStatus());
+            verify(accessPointRepository).findByCriteria(any(AccessPointCriteria.class), any(), any());
+            verify(accessPointRepository, never()).update(any());
+            verifyNoInteractions(eventManager);
         }
 
         @ParameterizedTest
         @EnumSource(AccessPoint.ReferenceType.class)
-        @SneakyThrows
-        void should_create_access_points_provided(AccessPoint.ReferenceType referenceType) {
+        void should_update_existing_access_points_of_the_reference(AccessPoint.ReferenceType referenceType) throws Exception {
             // Given
+            var unmodifiedAccessPoint = io.gravitee.repository.management.model.AccessPoint
+                .builder()
+                .id("unmodified-id")
+                .referenceType(AccessPointReferenceType.valueOf(referenceType.name()))
+                .referenceId("ref-id")
+                .target(AccessPointTarget.CONSOLE)
+                .host("host-1")
+                .overriding(true)
+                .secured(true)
+                .status(AccessPointStatus.CREATED)
+                .build();
+            var modifiedAccessPoint = io.gravitee.repository.management.model.AccessPoint
+                .builder()
+                .id("modified-id")
+                .referenceType(AccessPointReferenceType.valueOf(referenceType.name()))
+                .referenceId("ref-id")
+                .target(AccessPointTarget.GATEWAY)
+                .host("host-1")
+                .overriding(true)
+                .secured(true)
+                .status(AccessPointStatus.CREATED)
+                .build();
+            var accessPoints = List.of(
+                AccessPointAdapter.INSTANCE.toEntity(unmodifiedAccessPoint),
+                AccessPointAdapter.INSTANCE.toEntity(modifiedAccessPoint).toBuilder().host("modified-host").build()
+            );
+            when(accessPointRepository.findByCriteria(any(AccessPointCriteria.class), any(), any()))
+                .thenReturn(List.of(unmodifiedAccessPoint, modifiedAccessPoint));
+
+            // When
+            var dateBeforeDeletion = Instant.now().minusSeconds(1);
+            service.updateAccessPoints(referenceType, "ref-id", accessPoints);
+            var dateAfterDeletion = Instant.now().plusSeconds(1);
+
+            // Then
+
+            var createdAPsCaptor = ArgumentCaptor.forClass(io.gravitee.repository.management.model.AccessPoint.class);
+            verify(accessPointRepository).create(createdAPsCaptor.capture());
+            var createdAP = createdAPsCaptor.getValue();
+            assertThat(createdAP.getUpdatedAt()).isBefore(dateAfterDeletion).isAfter(dateBeforeDeletion);
+            assertThat(createdAP)
+                .extracting(
+                    io.gravitee.repository.management.model.AccessPoint::getStatus,
+                    io.gravitee.repository.management.model.AccessPoint::getHost,
+                    io.gravitee.repository.management.model.AccessPoint::getTarget
+                )
+                .containsExactly(AccessPointStatus.CREATED, "modified-host", AccessPointTarget.GATEWAY);
+
+            var updatedAPsCaptor = ArgumentCaptor.forClass(io.gravitee.repository.management.model.AccessPoint.class);
+            verify(accessPointRepository).update(updatedAPsCaptor.capture());
+            var updatedAP = updatedAPsCaptor.getValue();
+            assertThat(updatedAP.getUpdatedAt()).isBefore(dateAfterDeletion).isAfter(dateBeforeDeletion);
+            assertThat(updatedAP)
+                .extracting(
+                    io.gravitee.repository.management.model.AccessPoint::getStatus,
+                    io.gravitee.repository.management.model.AccessPoint::getHost,
+                    io.gravitee.repository.management.model.AccessPoint::getTarget
+                )
+                .containsExactly(AccessPointStatus.DELETED, "host-1", AccessPointTarget.GATEWAY);
+
+            verify(eventManager).publishEvent(eq(AccessPointEvent.CREATED), any());
+            verify(eventManager).publishEvent(eq(AccessPointEvent.DELETED), any());
+        }
+
+        @ParameterizedTest
+        @EnumSource(AccessPoint.ReferenceType.class)
+        void should_create_access_points_for_first_time(AccessPoint.ReferenceType referenceType) throws Exception {
+            // Given
+            when(accessPointRepository.findByCriteria(any(AccessPointCriteria.class), any(), any())).thenReturn(List.of());
+
             var accessPoints = Arrays
                 .stream(AccessPoint.Target.values())
                 .map(target ->
@@ -140,65 +213,74 @@ class AccessPointCrudServiceImplTest {
                 .toList();
 
             // When
+            var dateBeforeDeletion = Instant.now().minusSeconds(1);
             service.updateAccessPoints(referenceType, "ref-id", accessPoints);
+            var dateAfterDeletion = Instant.now().plusSeconds(1);
 
             // Then
             var captor = ArgumentCaptor.forClass(io.gravitee.repository.management.model.AccessPoint.class);
             verify(accessPointRepository, times(accessPoints.size())).create(captor.capture());
 
-            Assertions
-                .assertThat(captor.getAllValues())
+            assertThat(captor.getAllValues())
                 .hasSameSizeAs(accessPoints)
                 .allSatisfy(ap -> {
-                    Assertions.assertThat(ap.getId()).isNotNull();
-                    Assertions.assertThat(ap.getReferenceType()).isEqualTo(AccessPointReferenceType.valueOf(referenceType.name()));
-                    Assertions.assertThat(ap.getReferenceId()).isEqualTo("my-ref");
-                    Assertions.assertThat(ap.getHost()).isEqualTo("my-host");
-                    Assertions.assertThat(ap.isSecured()).isTrue();
-                    Assertions.assertThat(ap.isOverriding()).isTrue();
-                    Assertions.assertThat(ap.getStatus()).isEqualTo(AccessPointStatus.CREATED);
+                    assertThat(ap.getId()).isNotNull();
+                    assertThat(ap.getReferenceType()).isEqualTo(AccessPointReferenceType.valueOf(referenceType.name()));
+                    assertThat(ap.getReferenceId()).isEqualTo("my-ref");
+                    assertThat(ap.getHost()).isEqualTo("my-host");
+                    assertThat(ap.isSecured()).isTrue();
+                    assertThat(ap.isOverriding()).isTrue();
+                    assertThat(ap.getStatus()).isEqualTo(AccessPointStatus.CREATED);
+                    assertThat(ap.getUpdatedAt()).isAfter(dateBeforeDeletion).isBefore(dateAfterDeletion);
                 });
+
+            verify(eventManager, times(5)).publishEvent(eq(AccessPointEvent.CREATED), any());
         }
 
         @ParameterizedTest
         @EnumSource(AccessPoint.ReferenceType.class)
-        @SneakyThrows
-        void should_create_multiple_access_points(AccessPoint.ReferenceType referenceType) {
+        void should_not_update_access_points_if_nothing_changed(AccessPoint.ReferenceType referenceType) throws Exception {
             // Given
-            AccessPoint accessPoint1 = new AccessPoint();
-            accessPoint1.setReferenceType(referenceType);
-            accessPoint1.setReferenceId("ref-id");
-            AccessPoint accessPoint2 = new AccessPoint();
-            accessPoint2.setReferenceType(referenceType);
-            accessPoint2.setReferenceId("ref-id");
-            List<AccessPoint> accessPoints = Arrays.asList(accessPoint1, accessPoint2);
+            var ap1 = AccessPoint
+                .builder()
+                .referenceType(referenceType)
+                .referenceId("ref-id")
+                .target(AccessPoint.Target.CONSOLE)
+                .host("host-console")
+                .build();
+            var ap2 = AccessPoint
+                .builder()
+                .referenceType(referenceType)
+                .referenceId("ref-id")
+                .target(AccessPoint.Target.GATEWAY)
+                .host("host-gateway")
+                .build();
+            when(accessPointRepository.findByCriteria(any(AccessPointCriteria.class), any(), any()))
+                .thenReturn(List.of(AccessPointAdapter.INSTANCE.fromEntity(ap1), AccessPointAdapter.INSTANCE.fromEntity(ap2)));
+
+            var accessPoints = List.of(ap1, ap2);
 
             // When
             service.updateAccessPoints(referenceType, "ref-id", accessPoints);
 
             // Then
-            verify(accessPointRepository, times(2)).create(any(io.gravitee.repository.management.model.AccessPoint.class));
+            verify(accessPointRepository, never()).create(any(io.gravitee.repository.management.model.AccessPoint.class));
+            verifyNoInteractions(eventManager);
         }
 
         @ParameterizedTest
         @EnumSource(AccessPoint.ReferenceType.class)
-        @SneakyThrows
-        void testUpdateAccessPointsWithNullId(AccessPoint.ReferenceType referenceType) {
+        void should_update_access_points_with_null_id(AccessPoint.ReferenceType referenceType) throws Exception {
             // Given
-            AccessPoint accessPoint = new AccessPoint();
-            accessPoint.setReferenceType(referenceType);
-            accessPoint.setReferenceId("ref-id");
-            List<AccessPoint> accessPoints = Collections.singletonList(accessPoint);
+            var accessPoints = List.of(AccessPoint.builder().referenceType(referenceType).referenceId("ref-id").build());
 
             // When
             service.updateAccessPoints(referenceType, "ref-id", accessPoints);
 
             // Then
-            ArgumentCaptor<io.gravitee.repository.management.model.AccessPoint> captor = ArgumentCaptor.forClass(
-                io.gravitee.repository.management.model.AccessPoint.class
-            );
-            verify(accessPointRepository, times(1)).create(captor.capture());
-            io.gravitee.repository.management.model.AccessPoint createdAccessPoint = captor.getValue();
+            var captor = ArgumentCaptor.forClass(io.gravitee.repository.management.model.AccessPoint.class);
+            verify(accessPointRepository).create(captor.capture());
+            var createdAccessPoint = captor.getValue();
             assertThat(createdAccessPoint.getId()).isEqualTo("random-id");
         }
     }
